--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,11 @@ title: Web realizada con Jekyll
 email: Jviva2603@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Esta web ha sido realizada mediante Jekyll para un ejercicio del Certificado Profesional de desarrollo con tecnología web
-baseurl: "Ejercicio_Jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/Ejercicio_Jekyll" # the subpath of your site, e.g. /blog
 github_username:  Jviva2603
 
 # Build settings
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/architect@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
